--- a/contents/package.json
+++ b/contents/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.2.3",
     "css-loader": "^5.0.1",
+    "postcss-loader": "^4.2.0",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
