--- a/contents/package.json
+++ b/contents/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.3",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "postcss-loader": "^4.2.0",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
